Centering H1 and Roadmap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -833,6 +833,21 @@ section {
   }
 }
 
+/* Roadmap */
+
+.roadmap {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+/* Courses Hero Title */
+
+#hero_courses {
+  text-align:center;
+}
+
 /*--------------------------------------------------------------
 # Cource Details
 --------------------------------------------------------------*/
