--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -695,6 +695,26 @@ section {
 .why-us .content .more-btn:hover {
   color: #5fcf80;
   background: #fff;
+  margin-right: 20px;
+}
+
+.more-btn-right{
+  display: inline-block;
+  background: rgba(255, 255, 255, 0.2);
+  padding: 6px 30px 8px 30px;
+  color: #fff;
+  border-radius: 50px;
+  transition: all ease-in-out 0.4s;
+}
+
+.more-btn-right i{
+  font-size: 14px;
+}
+
+.more-btn-right:hover {
+  color: #5fcf80;
+  background: #fff;
+  margin-left: 20px;
 }
 .why-us .icon-boxes .icon-box {
   text-align: center;
