--- a/assets-2/css/main.css
+++ b/assets-2/css/main.css
@@ -2536,15 +2536,15 @@ input, select, textarea {
 			}
 
 				.wrapper.style1 .icon.major:before {
-					color: #4eb76a; /* here */
+					color: rgb(246, 251, 244); /* here */
 				}
 
 				.wrapper.style1-alt .icon.major:before {
-					color: #4eb76a;/* here */
+					color: rgb(246, 251, 244);/* here */
 				}
 
 				.wrapper.style2 .icon.major:before {
-					color: #4eb76a; /* here */
+					color: rgb(246, 251, 244); /* here */
 				}
 
 				.wrapper.style2-alt .icon.major:before {
@@ -3236,19 +3236,19 @@ input, select, textarea {
 			}
 
 		.wrapper.alt {
-			background-color: #5fcf80; /* here */
+			background-color: #F6FBF4; /* here */
 		}
 
 		.wrapper.style1 {
-			background-color: #5fcf80; /* here */
-		}
+			background-color: #F6FBF4; /* 1, 4 */
+		} 
 
 		.wrapper.style1-alt {
-			background-color: #5fcf80; /* here */
+			background-color: #4B8673; /* here */
 		}
 
 		.wrapper.style2 {
-			background-color: #5fcf80; /* here */
+			background-color: #F5DF99; /* 2 */
 		}
 
 		.wrapper.style2-alt {
@@ -3256,11 +3256,15 @@ input, select, textarea {
 		}
 
 		.wrapper.style3 {
-			background-color: #5fcf80; /* here */
+			background-color: #4B8673; /* here */
 		}
 
 		.wrapper.style3-alt {
 			background-color: #5fcf80; /* here */
+		}
+
+		.wrapper.style4 {
+			background-color: #5FD068; /* here */
 		}
 
 		.wrapper.fullscreen {
