--- a/assets-2/css/main.css
+++ b/assets-2/css/main.css
@@ -3007,7 +3007,7 @@ input, select, textarea {
 			background-position: center center;
 			background-size: cover;
 			border-radius: 0;
-			display: block;
+			display: flex;
 			position: relative;
 			width: 25em;
 		}
